Fix force openshift namespace for execution server

--- a/resources/ng-mortgage-bpmsuite70-full-mysql.yaml
+++ b/resources/ng-mortgage-bpmsuite70-full-mysql.yaml
@@ -417,7 +417,7 @@ objects:
         from:
           kind: ImageStreamTag
           name: bpmsuite70-executionserver-openshift:1.0
-          namespace: openshift
+          namespace: ${IMAGE_STREAM_NAMESPACE}
         type: Source
     triggers:
     - type: ImageChange
