--- a/resources/rhdm7-full-ng.yaml
+++ b/resources/rhdm7-full-ng.yaml
@@ -600,13 +600,13 @@ objects:
             tcpSocket:
               port: 8080
             timeoutSeconds: 1
-          volumeMounts:
-          - mountPath: /data
-            name: environment-volume
-        volumes:
-        - configMap:
-            name: ng-environment
-          name: environment-volume
+        #  volumeMounts:
+        #  - mountPath: /data
+        #    name: environment-volume
+        #volumes:
+        #- configMap:
+        #    name: ng-environment
+        #  name: environment-volume
     triggers:
     - imageChangeParams:
         automatic: true
