--- a/resources/rhdm7-full-ng.yaml
+++ b/resources/rhdm7-full-ng.yaml
@@ -206,6 +206,8 @@ objects:
       application: ${APPLICATION_NAME}
     name: ${APPLICATION_NAME}-ng-dmf
   spec:
+    # JA Bride:  setting all BCs and DCs to paused.  Will then start each one via ansible
+    paused: true
     nodeSelector: null
     output:
       to:
@@ -386,6 +388,8 @@ objects:
       application: ${APPLICATION_NAME}
     name: ${APPLICATION_NAME}-custom-execserv
   spec:
+    # JA Bride:  setting all BCs and DCs to paused.  Will then start each one via ansible
+    paused: true
     output:
       to:
         kind: ImageStreamTag
@@ -483,6 +487,8 @@ objects:
       application: ${APPLICATION_NAME}
     name: ${APPLICATION_NAME}-kieserver
   spec:
+    # JA Bride:  setting all BCs and DCs to paused.  Will then start each one via ansible
+    paused: true
     replicas: 1
     selector:
       deploymentConfig: ${APPLICATION_NAME}-kieserver
@@ -616,6 +622,8 @@ objects:
       application: ${APPLICATION_NAME}
     name: ${APPLICATION_NAME}-ng-dmf
   spec:
+    # JA Bride:  setting all BCs and DCs to paused.  Will then start each one via ansible
+    paused: true
     replicas: 1
     selector:
       deploymentConfig: ${APPLICATION_NAME}-ng-dmf
