--- a/resources/rhdm7-full-ng.yaml
+++ b/resources/rhdm7-full-ng.yaml
@@ -270,6 +270,8 @@ objects:
       application: ${APPLICATION_NAME}
     name: ${APPLICATION_NAME}-rhdmcentr
   spec:
+    # JA Bride:  setting all BCs and DCs to paused.  Will then start each one via ansible
+    paused: true
     replicas: 1
     selector:
       deploymentConfig: ${APPLICATION_NAME}-rhdmcentr
