https://github.com/redhat-gpe/bxms_decision_mgmt_foundations/issues/22

--- a/resources/rhdm7-no-bc-ng.yaml
+++ b/resources/rhdm7-no-bc-ng.yaml
@@ -410,12 +410,56 @@ objects:
         containers:
         - image: custom-execserv:latest
           imagePullPolicy: Always
+          name: ${APPLICATION_NAME}-kieserv
           livenessProbe:
             exec:
               command:
               - /bin/bash
               - -c
               - /opt/eap/bin/livenessProbe.sh
+          env:
+          - name: DROOLS_SERVER_FILTER_CLASSES
+            value: "${DROOLS_SERVER_FILTER_CLASSES}"
+          - name: KIE_ADMIN_PWD
+            value: "${KIE_ADMIN_PWD}"
+          - name: KIE_ADMIN_USER
+            value: "${KIE_ADMIN_USER}"
+          - name: KIE_MBEANS
+            value: "${KIE_MBEANS}"
+          - name: KIE_SERVER_BYPASS_AUTH_USER
+            value: "${KIE_SERVER_BYPASS_AUTH_USER}"
+          - name: KIE_SERVER_CONTROLLER_PWD
+            value: "${KIE_SERVER_CONTROLLER_PWD}"
+          - name: KIE_SERVER_CONTROLLER_SERVICE
+            value: "${APPLICATION_NAME}-rhdmcentr"
+          - name: KIE_SERVER_CONTROLLER_USER
+            value: "${KIE_SERVER_CONTROLLER_USER}"
+          - name: KIE_SERVER_HOST
+            valueFrom:
+              fieldRef:
+                fieldPath: status.podIP
+          - name: KIE_SERVER_PWD
+            value: "${KIE_SERVER_PWD}"
+          - name: KIE_SERVER_USER
+            value: "${KIE_SERVER_USER}"
+          - name: MAVEN_REPO_URL
+            value: "${MAVEN_REPO_URL}"
+          - name: MAVEN_REPO_SERVICE
+            value: "${APPLICATION_NAME}-rhdmcentr"
+          - name: MAVEN_REPO_PATH
+            value: "/maven2/"
+          - name: MAVEN_REPO_USERNAME
+            value: "${MAVEN_REPO_USERNAME}"
+          - name: MAVEN_REPO_PASSWORD
+            value: "${MAVEN_REPO_PASSWORD}"
+          - name: HTTPS_KEYSTORE_DIR
+            value: "/etc/kieserver-secret-volume"
+          - name: HTTPS_KEYSTORE
+            value: "${KIE_SERVER_HTTPS_KEYSTORE}"
+          - name: HTTPS_NAME
+            value: "${KIE_SERVER_HTTPS_NAME}"
+          - name: HTTPS_PASSWORD
+            value: "${KIE_SERVER_HTTPS_PASSWORD}"
           resources:
             limits:
               cpu: "1"
@@ -423,7 +467,6 @@ objects:
             requests:
               cpu: "1"
               memory: 1Gi
-          name: ${APPLICATION_NAME}-execserv
           ports:
           - containerPort: 8778
             name: jolokia
