--- a/resources/rhdm7-no-bc-ng.yaml
+++ b/resources/rhdm7-no-bc-ng.yaml
@@ -408,7 +408,7 @@ objects:
         name: ${APPLICATION_NAME}-kieserver
       spec:
         containers:
-        - image: custom-execserv:latest
+        - image: custom-kieserver:latest
           imagePullPolicy: Always
           name: ${APPLICATION_NAME}-kieserv
           livenessProbe:
@@ -505,7 +505,7 @@ objects:
         - ${APPLICATION_NAME}-kieserver
         from:
           kind: ImageStreamTag
-          name: custom-execserv:latest
+          name: custom-kieserver:latest
           namespace: ${GPTE_IMAGE_STREAM_NAMESPACE}
       type: ImageChange
     - type: ConfigChange
