--- a/resources/rhdm7-full-ng.yaml
+++ b/resources/rhdm7-full-ng.yaml
@@ -214,7 +214,8 @@ objects:
     selector:
       deploymentConfig: ${APPLICATION_NAME}-rhdmcentr
     strategy:
-      type: Recreate
+      # https://github.com/redhat-gpe/bxms_decision_mgmt_foundations/issues/39
+      type: Rolling
     template:
       metadata:
         labels:
@@ -224,6 +225,7 @@ objects:
       spec:
         containers:
         - env:
+          # Can expect -Xmx of 2458MB based on 3Gi memory limit
           - name: JAVA_MAX_MEM_RATIO
             value: "80"
           - name: JAVA_INITIAL_MEM_RATIO
@@ -273,6 +275,7 @@ objects:
           resources:
             limits:
               cpu: "1"
+              # Utilized when determining -XmX
               memory: 3Gi
             requests:
               cpu: "1"
@@ -425,7 +428,8 @@ objects:
     selector:
       deploymentConfig: ${APPLICATION_NAME}-kieserver
     strategy:
-      type: Recreate
+      # https://github.com/redhat-gpe/bxms_decision_mgmt_foundations/issues/39
+      type: Rolling
     template:
       metadata:
         labels:
@@ -633,7 +637,8 @@ objects:
     selector:
       deploymentConfig: ${APPLICATION_NAME}-ng-dmf
     strategy:
-      type: Recreate
+      # https://github.com/redhat-gpe/bxms_decision_mgmt_foundations/issues/39
+      type: Rolling
     template:
       metadata:
         labels:
