https://github.com/redhat-gpe/bxms_decision_mgmt_foundations/issues/20

--- a/resources/ansible/dm_provision.yml
+++ b/resources/ansible/dm_provision.yml
@@ -6,7 +6,7 @@
   remote_user: root
   connection: local
   tasks:
-      - debug: msg="new project = {{dm_project}}"
+      - debug: msg="new project = {{ocp_project}}"
 
   roles:
     - dm
