--- a/resources/ansible/group_vars/all/vars.yml
+++ b/resources/ansible/group_vars/all/vars.yml
@@ -1,7 +1,6 @@
-#dm_template: https://raw.githubusercontent.com/gpe-mw-training/3scale_onpremise_implementation_labs/master/resources/3scale-amp-2.1.yml
-dm_template: file:///u02/redhat/gpteTraining/mw/bxms/bxms_decision_mgmt_foundations/lab/resources/rhdm7-only.yaml
+dm_template: https://raw.githubusercontent.com/gpe-mw-training/bxms_decision_mgmt_foundations_lab/master/resources/rhdm7-only.yaml
 
-dm_project: "{{OCP_PROJECT_PREFIX}}-dm-ansible"
+ocp_project: "{{OCP_PROJECT_PREFIX}}-dm-ansible"
 
 build_status_retries: 30
 build_status_delay: 15
