https://github.com/redhat-gpe/bxms_decision_mgmt_foundations/issues/64

--- a/resources/rhdm7-full-ng.yaml
+++ b/resources/rhdm7-full-ng.yaml
@@ -302,6 +302,8 @@ objects:
           - mountPath: /etc/decisioncentral-secret-volume
             name: decisioncentral-keystore-volume
             readOnly: true
+          - name: "${APPLICATION_NAME}-rhdmcentr-pvol"
+            mountPath: "/opt/eap/standalone/data/bpmsuite"
         serviceAccountName: decisioncentral-service-account
         terminationGracePeriodSeconds: 60
         volumes:
